Fix: Remove overflow:hidden from wrapper to prevent scroll conflict

--- a/src/app/_styles/scss/_common.scss
+++ b/src/app/_styles/scss/_common.scss
@@ -30,7 +30,6 @@ body {
 
 .mil-wrapper {
     position: relative;
-    overflow: hidden;
     width: 100%;
     height: auto;
 }
